# bazel-rules-foreign-example-jq

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  README.md  WORKSPACE  defs.bzl
tools/: BUILD.bazel
